<resources>
    <string name="app_name">Score</string>
    <string name="textview">TeamA</string>
    <string name="textview2">TeamB</string>
    <string name="scoreA" translatable="false">0</string>
    <string name="scoreB" translatable="false">0</string>
    <string name="button1" translatable="false">+1</string>
    <string name="butto2" translatable="false">+2</string>
    <string name="button3" translatable="false">+3</string>
    <string name="undoButton">undo</string>
    <string name="resetButton">reset</string>
</resources>
